# template_Qt

./: .coveragerc  .flake8  .gitignore  README.md  convert.bat  main.py  pyproject.toml  requirements.txt
GUI/: __init__.py  main_window.py  menu1.py  menu2.py  modal1.py
GUI/qt_py/: ui_dialog1.py  ui_main_window.py  ui_widget.py  ui_widget2.py  ui_wizard.py
GUI/qt_ui/: dialog1.ui  main_window.ui  widget.ui  widget2.ui
app/: app.py
